--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "author": "iban.moreno.martin@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "socket.io": "^2.3.0",
     "socket.io-stream": "^0.9.1"
