--- a/control/package.json
+++ b/control/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@nuxtjs/svg-sprite": "^0.4.11",
     "nuxt": "^2.14.0",
     "socket.io-client": "^2.3.0"
   },
